// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ToggleField disabled w/label 1`] = `
.c0 {
  background-color: transparent;
  padding: 15px;
  height: auto;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  color: rgb(197,197,197);
}

.c4 {
  padding-top: 5px;
  font-size: 12px;
  line-height: 15px;
}

.c1 {
  margin-bottom: 8px;
  font-size: 16px;
  position: relative;
  line-height: 24px;
  width: 100%;
}

.c6 {
  position: relative;
  display: inline-block;
  width: 38px;
  height: 20.5px;
}

.c9 {
  position: absolute;
  cursor: not-allowed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgb(197,197,197);
  -webkit-transition: 0.4s;
  -webkit-transition: 0.4s;
  transition: 0.4s;
  border-radius: 50px;
}

.c9:before {
  position: absolute;
  content: '';
  height: 16.5px;
  width: 16.5px;
  left: 2px;
  bottom: 2px;
  background-color: rgb(251,250,252);
  -webkit-transition: 0.4s;
  -webkit-transition: 0.4s;
  transition: 0.4s;
  border-radius: 50%;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.2);
}

.c7 {
  display: none;
}

.c7:checked + .c8 {
  background-color: rgb(70,55,134);
}

.c7:focus + .c8 {
  box-shadow: 0 0 1px rgb(70,55,134);
}

.c7:checked + .c8:before {
  -webkit-transform: translateX(17px);
  -ms-transform: translateX(17px);
  transform: translateX(17px);
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

<div
  className="c0"
  height="auto"
>
  <div
    className="c1"
    fontSize={2}
    onChange={[Function]}
  >
    <div
      className="c2"
      disabled={true}
    >
      <div
        className="c3"
        disabled={true}
      >
        <label
          htmlFor="toggleField"
        >
          This is a label
        </label>
        <div
          className="c4"
        />
      </div>
      <div
        checked=""
        className="c5"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        value=""
      >
        <label
          className="c6"
        >
          <input
            checked={false}
            className="c7"
            disabled={true}
            name="toggleField"
            onChange={[Function]}
            type="checkbox"
          />
          <span
            checked={false}
            className="c8 c9"
            disabled={true}
          />
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ToggleField touched w/label & error 1`] = `
.c0 {
  background-color: transparent;
  padding: 15px;
  height: auto;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  color: rgb(202,25,0);
}

.c4 {
  padding-top: 5px;
  font-size: 12px;
  line-height: 15px;
}

.c5 {
  color: rgb(202,25,0);
}

.c1 {
  margin-bottom: 8px;
  font-size: 16px;
  position: relative;
  line-height: 24px;
  width: 100%;
}

.c7 {
  position: relative;
  display: inline-block;
  width: 38px;
  height: 20.5px;
}

.c10 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgb(197,197,197);
  -webkit-transition: 0.4s;
  -webkit-transition: 0.4s;
  transition: 0.4s;
  border-radius: 50px;
}

.c10:before {
  position: absolute;
  content: '';
  height: 16.5px;
  width: 16.5px;
  left: 2px;
  bottom: 2px;
  background-color: white;
  -webkit-transition: 0.4s;
  -webkit-transition: 0.4s;
  transition: 0.4s;
  border-radius: 50%;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.2);
}

.c8 {
  display: none;
}

.c8:checked + .c9 {
  background-color: rgb(202,25,0);
}

.c8:focus + .c9 {
  box-shadow: 0 0 1px rgb(202,25,0);
}

.c8:checked + .c9:before {
  -webkit-transform: translateX(17px);
  -ms-transform: translateX(17px);
  transform: translateX(17px);
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

<div
  className="c0"
  height="auto"
>
  <div
    className="c1"
    fontSize={2}
    onChange={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <label
          htmlFor="toggleField"
        >
          This is a label
        </label>
        <div
          className="c4"
        >
          <span
            className="c5"
          >
            This is a super long mega crazy extravagantly huge Error Message
          </span>
        </div>
      </div>
      <div
        checked={true}
        className="c6"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        value={true}
      >
        <label
          className="c7"
        >
          <input
            checked={true}
            className="c8"
            disabled={false}
            name="toggleField"
            onChange={[Function]}
            type="checkbox"
          />
          <span
            checked={true}
            className="c9 c10"
            disabled={false}
          />
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ToggleField touched w/label & warning 1`] = `
.c0 {
  background-color: transparent;
  padding: 15px;
  height: auto;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  color: rgb(255,152,0);
}

.c4 {
  padding-top: 5px;
  font-size: 12px;
  line-height: 15px;
}

.c5 {
  color: rgb(255,152,0);
}

.c1 {
  margin-bottom: 8px;
  font-size: 16px;
  position: relative;
  line-height: 24px;
  width: 100%;
}

.c7 {
  position: relative;
  display: inline-block;
  width: 38px;
  height: 20.5px;
}

.c10 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgb(197,197,197);
  -webkit-transition: 0.4s;
  -webkit-transition: 0.4s;
  transition: 0.4s;
  border-radius: 50px;
}

.c10:before {
  position: absolute;
  content: '';
  height: 16.5px;
  width: 16.5px;
  left: 2px;
  bottom: 2px;
  background-color: white;
  -webkit-transition: 0.4s;
  -webkit-transition: 0.4s;
  transition: 0.4s;
  border-radius: 50%;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.2);
}

.c8 {
  display: none;
}

.c8:checked + .c9 {
  background-color: rgb(255,152,0);
}

.c8:focus + .c9 {
  box-shadow: 0 0 1px rgb(255,152,0);
}

.c8:checked + .c9:before {
  -webkit-transform: translateX(17px);
  -ms-transform: translateX(17px);
  transform: translateX(17px);
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

<div
  className="c0"
  height="auto"
>
  <div
    className="c1"
    fontSize={2}
    onChange={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <label
          htmlFor="toggleField"
        >
          This is a label
        </label>
        <div
          className="c4"
        >
          <span
            className="c5"
          >
            Warning Message
          </span>
        </div>
      </div>
      <div
        checked={true}
        className="c6"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        value={true}
      >
        <label
          className="c7"
        >
          <input
            checked={true}
            className="c8"
            disabled={false}
            name="toggleField"
            onChange={[Function]}
            type="checkbox"
          />
          <span
            checked={true}
            className="c9 c10"
            disabled={false}
          />
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ToggleField touched w/label + help text 1`] = `
.c0 {
  background-color: transparent;
  padding: 15px;
  height: auto;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  color: rgb(70,55,134);
}

.c4 {
  padding-top: 5px;
  font-size: 12px;
  line-height: 15px;
}

.c5 {
  color: rgb(170,170,170);
}

.c1 {
  margin-bottom: 8px;
  font-size: 16px;
  max-width: 250px;
  position: relative;
  line-height: 24px;
  width: 100%;
}

.c7 {
  position: relative;
  display: inline-block;
  width: 38px;
  height: 20.5px;
}

.c10 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgb(197,197,197);
  -webkit-transition: 0.4s;
  -webkit-transition: 0.4s;
  transition: 0.4s;
  border-radius: 50px;
}

.c10:before {
  position: absolute;
  content: '';
  height: 16.5px;
  width: 16.5px;
  left: 2px;
  bottom: 2px;
  background-color: white;
  -webkit-transition: 0.4s;
  -webkit-transition: 0.4s;
  transition: 0.4s;
  border-radius: 50%;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.2);
}

.c8 {
  display: none;
}

.c8:checked + .c9 {
  background-color: rgb(70,55,134);
}

.c8:focus + .c9 {
  box-shadow: 0 0 1px rgb(70,55,134);
}

.c8:checked + .c9:before {
  -webkit-transform: translateX(17px);
  -ms-transform: translateX(17px);
  transform: translateX(17px);
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

<div
  className="c0"
  height="auto"
>
  <div
    className="c1"
    fontSize={2}
    onChange={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <label
          htmlFor="toggleField"
        >
          This is a label
        </label>
        <div
          className="c4"
        >
          <span
            className="c5"
          >
            This is some help text
          </span>
        </div>
      </div>
      <div
        checked={true}
        className="c6"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        value={true}
      >
        <label
          className="c7"
        >
          <input
            checked={true}
            className="c8"
            disabled={false}
            name="toggleField"
            onChange={[Function]}
            type="checkbox"
          />
          <span
            checked={true}
            className="c9 c10"
            disabled={false}
          />
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ToggleField touched w/label 1`] = `
.c0 {
  background-color: transparent;
  padding: 15px;
  height: auto;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  color: rgb(70,55,134);
}

.c4 {
  padding-top: 5px;
  font-size: 12px;
  line-height: 15px;
}

.c1 {
  margin-bottom: 8px;
  font-size: 16px;
  position: relative;
  line-height: 24px;
  width: 100%;
}

.c6 {
  position: relative;
  display: inline-block;
  width: 38px;
  height: 20.5px;
}

.c9 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgb(197,197,197);
  -webkit-transition: 0.4s;
  -webkit-transition: 0.4s;
  transition: 0.4s;
  border-radius: 50px;
}

.c9:before {
  position: absolute;
  content: '';
  height: 16.5px;
  width: 16.5px;
  left: 2px;
  bottom: 2px;
  background-color: white;
  -webkit-transition: 0.4s;
  -webkit-transition: 0.4s;
  transition: 0.4s;
  border-radius: 50%;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.2);
}

.c7 {
  display: none;
}

.c7:checked + .c8 {
  background-color: rgb(70,55,134);
}

.c7:focus + .c8 {
  box-shadow: 0 0 1px rgb(70,55,134);
}

.c7:checked + .c8:before {
  -webkit-transform: translateX(17px);
  -ms-transform: translateX(17px);
  transform: translateX(17px);
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

<div
  className="c0"
  height="auto"
>
  <div
    className="c1"
    fontSize={2}
    onChange={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <label
          htmlFor="toggleField"
        >
          This is a label
        </label>
        <div
          className="c4"
        />
      </div>
      <div
        checked={true}
        className="c5"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        value={true}
      >
        <label
          className="c6"
        >
          <input
            checked={true}
            className="c7"
            disabled={false}
            name="toggleField"
            onChange={[Function]}
            type="checkbox"
          />
          <span
            checked={true}
            className="c8 c9"
            disabled={false}
          />
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ToggleField untouched w/label 1`] = `
.c0 {
  background-color: transparent;
  padding: 15px;
  height: auto;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  color: rgb(70,55,134);
}

.c4 {
  padding-top: 5px;
  font-size: 12px;
  line-height: 15px;
}

.c1 {
  margin-bottom: 8px;
  font-size: 16px;
  position: relative;
  line-height: 24px;
  width: 100%;
}

.c6 {
  position: relative;
  display: inline-block;
  width: 38px;
  height: 20.5px;
}

.c9 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgb(197,197,197);
  -webkit-transition: 0.4s;
  -webkit-transition: 0.4s;
  transition: 0.4s;
  border-radius: 50px;
}

.c9:before {
  position: absolute;
  content: '';
  height: 16.5px;
  width: 16.5px;
  left: 2px;
  bottom: 2px;
  background-color: white;
  -webkit-transition: 0.4s;
  -webkit-transition: 0.4s;
  transition: 0.4s;
  border-radius: 50%;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.2);
}

.c7 {
  display: none;
}

.c7:checked + .c8 {
  background-color: rgb(70,55,134);
}

.c7:focus + .c8 {
  box-shadow: 0 0 1px rgb(70,55,134);
}

.c7:checked + .c8:before {
  -webkit-transform: translateX(17px);
  -ms-transform: translateX(17px);
  transform: translateX(17px);
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

<div
  className="c0"
  height="auto"
>
  <div
    className="c1"
    fontSize={2}
    onChange={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <label
          htmlFor="toggleField"
        >
          This is a label
        </label>
        <div
          className="c4"
        />
      </div>
      <div
        checked=""
        className="c5"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        value=""
      >
        <label
          className="c6"
        >
          <input
            checked={false}
            className="c7"
            disabled={false}
            name="toggleField"
            onChange={[Function]}
            type="checkbox"
          />
          <span
            checked={false}
            className="c8 c9"
            disabled={false}
          />
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ToggleField untouched w/label right 1`] = `
.c0 {
  background-color: transparent;
  padding: 15px;
  height: auto;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c3 {
  padding-left: 8px;
  color: rgb(101,113,121);
}

.c4 {
  padding-top: 5px;
  font-size: 12px;
  line-height: 15px;
}

.c1 {
  margin-bottom: 8px;
  font-size: 16px;
  position: relative;
  line-height: 24px;
  width: 100%;
}

.c6 {
  position: relative;
  display: inline-block;
  width: 38px;
  height: 20.5px;
}

.c9 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgb(197,197,197);
  -webkit-transition: 0.4s;
  -webkit-transition: 0.4s;
  transition: 0.4s;
  border-radius: 50px;
}

.c9:before {
  position: absolute;
  content: '';
  height: 16.5px;
  width: 16.5px;
  left: 2px;
  bottom: 2px;
  background-color: white;
  -webkit-transition: 0.4s;
  -webkit-transition: 0.4s;
  transition: 0.4s;
  border-radius: 50%;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.2);
}

.c7 {
  display: none;
}

.c7:checked + .c8 {
  background-color: rgb(70,55,134);
}

.c7:focus + .c8 {
  box-shadow: 0 0 1px rgb(70,55,134);
}

.c7:checked + .c8:before {
  -webkit-transform: translateX(17px);
  -ms-transform: translateX(17px);
  transform: translateX(17px);
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

<div
  className="c0"
  height="auto"
>
  <div
    className="c1"
    fontSize={2}
    onChange={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <label
          htmlFor="toggleField"
        >
          This is a label
        </label>
        <div
          className="c4"
        />
      </div>
      <div
        checked=""
        className="c5"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        value=""
      >
        <label
          className="c6"
        >
          <input
            checked={false}
            className="c7"
            disabled={false}
            name="toggleField"
            onChange={[Function]}
            type="checkbox"
          />
          <span
            checked={false}
            className="c8 c9"
            disabled={false}
          />
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ToggleField untouched w/maxWidth 1`] = `
.c0 {
  background-color: transparent;
  padding: 15px;
  height: auto;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  color: rgb(101,113,121);
}

.c4 {
  padding-top: 5px;
  font-size: 12px;
  line-height: 15px;
}

.c1 {
  margin-bottom: 8px;
  font-size: 16px;
  max-width: 250px;
  position: relative;
  line-height: 24px;
  width: 100%;
}

.c6 {
  position: relative;
  display: inline-block;
  width: 38px;
  height: 20.5px;
}

.c9 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgb(197,197,197);
  -webkit-transition: 0.4s;
  -webkit-transition: 0.4s;
  transition: 0.4s;
  border-radius: 50px;
}

.c9:before {
  position: absolute;
  content: '';
  height: 16.5px;
  width: 16.5px;
  left: 2px;
  bottom: 2px;
  background-color: white;
  -webkit-transition: 0.4s;
  -webkit-transition: 0.4s;
  transition: 0.4s;
  border-radius: 50%;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.2);
}

.c7 {
  display: none;
}

.c7:checked + .c8 {
  background-color: rgb(70,55,134);
}

.c7:focus + .c8 {
  box-shadow: 0 0 1px rgb(70,55,134);
}

.c7:checked + .c8:before {
  -webkit-transform: translateX(17px);
  -ms-transform: translateX(17px);
  transform: translateX(17px);
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

<div
  className="c0"
  height="auto"
>
  <div
    className="c1"
    fontSize={2}
    onChange={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <label
          htmlFor="toggleField"
        >
          This is a label
        </label>
        <div
          className="c4"
        />
      </div>
      <div
        checked=""
        className="c5"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        value=""
      >
        <label
          className="c6"
        >
          <input
            checked={false}
            className="c7"
            disabled={false}
            name="toggleField"
            onChange={[Function]}
            type="checkbox"
          />
          <span
            checked={false}
            className="c8 c9"
            disabled={false}
          />
        </label>
      </div>
    </div>
  </div>
</div>
`;
